* 0.1.0 is no valid version, so start with 0.1.0.
git-svn-id: http://svn.php.net/repository/pear/packages/URI_Template/trunk@254680 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -14,10 +14,10 @@
   <active>yes</active>
  </lead>
  <date>2008-03-09</date>
- <time>12:01:44</time>
+ <time>12:05:56</time>
  <version>
-  <release>0.0.1</release>
-  <api>0.0.1</api>
+  <release>0.1.0</release>
+  <api>0.1.0</api>
  </version>
  <stability>
   <release>alpha</release>
@@ -54,6 +54,19 @@
    <version>
     <release>0.0.1</release>
     <api>0.0.1</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2008-03-09</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
+   <notes>Initial release</notes>
+  </release>
+  <release>
+   <version>
+    <release>0.1.0</release>
+    <api>0.1.0</api>
    </version>
    <stability>
     <release>alpha</release>
