* Fixed PEAR username in package definition.
git-svn-id: http://svn.php.net/repository/pear/packages/URI_Template/trunk@254689 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -9,12 +9,12 @@
  <description>URI_Template is a parser for URI Templates as defined in the URI Template specification (http://bitworking.org/projects/URI-Templates).</description>
  <lead>
   <name>Martin Jansen</name>
-  <user>martin</user>
+  <user>mj</user>
   <email>mj@php.net</email>
   <active>yes</active>
  </lead>
  <date>2008-03-09</date>
- <time>12:05:56</time>
+ <time>13:33:09</time>
  <version>
   <release>0.1.0</release>
   <api>0.1.0</api>
