--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.7.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
+<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
     http://pear.php.net/dtd/tasks-1.0.xsd
     http://pear.php.net/dtd/package-2.0
     http://pear.php.net/dtd/package-2.0.xsd">
@@ -13,18 +13,21 @@
   <email>mj@php.net</email>
   <active>yes</active>
  </lead>
- <date>2008-10-10</date>
- <time>09:14:55</time>
+ <date>2009-12-21</date>
+ <time>21:44:53</time>
  <version>
-  <release>0.3.0</release>
-  <api>0.3.0</api>
+  <release>0.3.1</release>
+  <api>0.3.1</api>
  </version>
  <stability>
   <release>alpha</release>
   <api>alpha</api>
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
- <notes>Implemented Feature Request #14763: Added new method getTemplateVariables() which returns an array containing the template variables names. (Provided by David Jean Louis.)</notes>
+ <notes>
+* Implemented Feature Request #15384: Make rawurlencode optional.
+* Added full compatibility for PHP 5.3.0+.
+ </notes>
  <contents>
   <dir baseinstalldir="URI" name="/">
    <dir name="tests">
@@ -61,7 +64,9 @@
    </stability>
    <date>2008-03-09</date>
    <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
-   <notes>Initial release</notes>
+   <notes>
+Initial release
+   </notes>
   </release>
   <release>
    <version>
@@ -74,7 +79,9 @@
    </stability>
    <date>2008-03-09</date>
    <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
-   <notes>Initial release</notes>
+   <notes>
+Initial release
+   </notes>
   </release>
   <release>
    <version>
@@ -87,7 +94,9 @@
    </stability>
    <date>2008-04-05</date>
    <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
-   <notes>Added support for the 03 draft of the URI Template specification.</notes>
+   <notes>
+Added support for the 03 draft of the URI Template specification.
+   </notes>
   </release>
   <release>
    <version>
@@ -100,7 +109,25 @@
    </stability>
    <date>2008-10-10</date>
    <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
-   <notes>Implemented Feature Request #14763: Added new method getTemplateVariables() which returns an array containing the template variables names. (Provided by David Jean Louis.)</notes>
+   <notes>
+Implemented Feature Request #14763: Added new method getTemplateVariables() which returns an array containing the template variables names. (Provided by David Jean Louis.)
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.3.1</release>
+    <api>0.3.1</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2009-12-21</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
+   <notes>
+* Implemented Feature Request #15384: Make rawurlencode optional.
+* Added full compatibility for PHP 5.3.0+.
+   </notes>
   </release>
  </changelog>
 </package>
