--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
-    http://pear.php.net/dtd/tasks-1.0.xsd
-    http://pear.php.net/dtd/package-2.0
-    http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
  <name>URI_Template</name>
  <channel>pear.php.net</channel>
  <summary>Parser for URI Templates.</summary>
@@ -13,10 +10,10 @@
   <email>mj@php.net</email>
   <active>yes</active>
  </lead>
- <date>2009-12-21</date>
- <time>21:44:53</time>
+ <date>2010-10-25</date>
+ <time>23:13:55</time>
  <version>
-  <release>0.3.1</release>
+  <release>0.3.2</release>
   <api>0.3.1</api>
  </version>
  <stability>
@@ -25,21 +22,18 @@
  </stability>
  <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
  <notes>
-* Implemented Feature Request #15384: Make rawurlencode optional.
-* Added full compatibility for PHP 5.3.0+.
+Automatically built QA release
+Bug #16768 Pear code styling problem - mj
  </notes>
  <contents>
   <dir baseinstalldir="URI" name="/">
-   <dir name="tests">
-    <dir name="URI">
-     <dir name="Template">
-      <file name="TemplateTest.php" role="test" />
-     </dir> <!-- //tests/URI/Template -->
-    </dir> <!-- //tests/URI -->
-    <file name="AllTests.php" role="test" />
-   </dir> <!-- //tests -->
-   <file name="Template.php" role="php" />
-  </dir> <!-- / -->
+   <file baseinstalldir="URI" md5sum="7b2659d3cc3a1c524ef9c185b210e4d3" name="tests/AllTests.php" role="test" />
+   <file baseinstalldir="URI" md5sum="d439a3161ccccabc860406ab9cf05e50" name="tests/URI/Template/TemplateTest.php" role="test" />
+   <file baseinstalldir="URI" md5sum="5a161134bb1ebbe4ff5caef0b1394778" name="URI/Template.php" role="php" />
+   <file baseinstalldir="URI" md5sum="17c1c33953698c75d5e6d63b64a9fe15" name="makepackage.php" role="php" />
+   <file baseinstalldir="URI" md5sum="0812622d1a72f9f506fe85e6127cff53" name="runtests.sh" role="data" />
+   <file baseinstalldir="URI" md5sum="22e79f5737a776b8654cf58423dc18e3" name="Template.php" role="php" />
+  </dir>
  </contents>
  <dependencies>
   <required>
@@ -127,6 +121,22 @@ Implemented Feature Request #14763: Added new method getTemplateVariables() whic
    <notes>
 * Implemented Feature Request #15384: Make rawurlencode optional.
 * Added full compatibility for PHP 5.3.0+.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.3.2</release>
+    <api>0.3.1</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2010-10-25</date>
+   <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
+   <notes>
+Automatically built QA release
+Bug #16768 Pear code styling problem - mj
    </notes>
   </release>
  </changelog>
