--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "autoload": {
         "psr-0": {
-            "URI_Template": "./"
+            "URI": "./"
         }
     },
     "description": "More info available on: http://pear.php.net/package/URI_Template",
